# copyt

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yaml
copyt/: __init__.py  __main__.py  _cli_handler.py  _db_manager.py  api.py  global_options.py  helpers.py  info.py
copyt/models/: clipboard_record.py  global_options.py
tests/: __init__.py  test_api.py  test_cli.py
tests_data/assets/: .gitattributes  README.txt
