[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copyt"
description = "Copy It! — Another clipboard manager for Wayland"
readme = "README.md"
requires-python = ">=3.11"

authors = [{name="Chris1320", email="chris1320is@protonmail.com"}]
license = {text = "MIT"}
classifiers = [  # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

[project.urls]
"Repository" = "https://github.com/Chris1320/copyt"

[project.optional-dependencies]
test = [
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "pytest-benchmark==4.0.0"
]

[project.scripts]
copyt = "copyt.__main__:main"

[tool.setuptools]
packages = ["copyt"]

[tool.setuptools.dynamic]
version = {attr = "copyt.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cache-clear --color=yes --code-highlight=yes --cov=copyt -vvv"
testpaths = [
    "tests"
]
pythonpath = [
    "."
]
